kubectl_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rubyapp-ingress
spec:
  tls:
  - hosts:
    - gitops-helloworld-rubyapp.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: gitops-helloworld-rubyapp.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rubyapp-service
          servicePort: 4567
